[project]
name = "pvpro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "exifread>=3.5.1",
    "ffmpeg-python>=0.2.0",
    "ipykernel>=6.30.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "tabulate>=0.9.0",
    "tqdm>=4.67.1",
]

[tool.uv]
# index-url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
index-url = "https://mirrors.aliyun.com/pypi/simple/"

[tool.ruff]
extend-include = ["*.ipynb"]
select = ["E", "F", "W", "I"]
ignore = ["E203", "E501"]
line-length = 88
fix = true

[tool.ruff.format]
quote-style = "preserve"
